--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,57 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>RapidooChalenge</title>
-    <link rel="stylesheet" href="/bootstrap.min.css">
-    <link rel="stylesheet" href="/app.css">
-    <%= csrf_meta_tags %>
+<html lang="en">
+    <head>
+      <meta charset="utf-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+      <title>Rapidoo Challenge</title>
+      
+      <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+      <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+      <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+      <meta name="viewport" content="width=device-width" />
+    
+      <link rel="apple-touch-icon" sizes="76x76" href="/img/apple-icon.png" />
+      <link rel="icon" type="image/png" href="/img/favicon.png" />
+    
+      <!--     Fonts and icons     -->
+      <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+    
+      <!-- CSS Files -->
+      <link href="/css/bootstrap.min.css" rel="stylesheet" />
+      <link href="/css/material-bootstrap-wizard.css" rel="stylesheet" />
+    
+      <!-- CSS Just for demo purpose, don't include it in your project -->
+      <link href="/css/demo.css" rel="stylesheet" />
+    </head>
 
-  <body>
-      <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-          <a class="navbar-brand" href="/">Rapidoo Challenge</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-    </nav>
-    <%= yield %>
-  </body>
+    <body>
+        <div class="image-container set-full-height" style="background-image: url('assets/img/wizard-book.jpg')">
+          <!--   Creative Tim Branding   -->
+          <a href="/">
+               <div class="logo-container">
+                  <div class="brand">
+                      Rapidoo
+                  </div>
+              </div>
+          </a>
+
+
+          <%= yield %>
+
+          <div class="footer">
+              
+          </div>
+      </div>
+    </body>
+    <!--   Core JS Files   -->
+	<script src="/js/jquery-2.2.4.min.js" type="text/javascript"></script>
+	<script src="/js/bootstrap.min.js" type="text/javascript"></script>
+	<script src="/js/jquery.bootstrap.js" type="text/javascript"></script>
+
+	<!--  Plugin for the Wizard -->
+	<script src="/js/material-bootstrap-wizard.js"></script>
+
+	<!--  More information about jquery.validate here: http://jqueryvalidation.org/	 -->
+	<script src="/js/jquery.validate.min.js"></script>
 </html>
