--- a/app/views/propostas/show.html.erb
+++ b/app/views/propostas/show.html.erb
@@ -1,18 +1,53 @@
+    <!--   Big container   -->
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-8 col-sm-offset-2">
+                <!--      Wizard container        -->
+                <div class="wizard-container">
+                    <div class="card wizard-card" data-color="red" id="wizard">
 
-  
-  <div class="container">
-  
-        <div class="starter-template">
-          <h1>Rapidoo Code Challenge</h1>
-        
-          <div class="alert alert-success" role="alert">
-            <h5>SUCESSO!</h5>
+                                    <!--        You can switch " data-color="blue" "  with one of the next bright colors: "green", "orange", "red", "purple"             -->
+
+                                    <div class="wizard-header">
+                                        <h3 class="wizard-title">
+                                            Resultado da simulação
+                                        </h3>
+                                    </div>
+                                    <div class="wizard-navigation">
+                                        <ul>
+                                            <li>
+                                                <a href="#details" data-toggle="tab">Resultado</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+
+                                    <div class="tab-content">
+                                        <div class="tab-pane" id="details">
+                                            <div class="row">
+                                                <div class="col-sm-12">
+                                                    <h4 class="info-text">Esse é o resultado da sua simulação!</h4>
+                                                </div>
+                                                <div class="col-sm-12">
+                                                    <h4> A taxa por 10 dias é de
+                                                        <b><%= @proposta.taxa%></b> %</h4>
+                                                    <h4> A taxa total é de
+                                                            <b><%= @proposta.taxatotal%></b> %</h4>
+                                                    <h4> O valor a receber é de R$
+                                                            <b><%= @proposta.valorareceber%></b>
+                                                    </h4>
+
+
+                                                </div>
+
+                                            </div>
+                                        </div>
+
+                                    </div>
+                    </div>
+                </div>
+                <!-- wizard container -->
+            </div>
         </div>
-        
-        <p> A taxa por 10 dias é de <%= @proposta.taxa%> %</p>
-        <p> A taxa total é de <%= @proposta.taxatotal%> %</p>
-        <p> O valor a receber é de R$ <%= @proposta.valorareceber%> </p>
-        
-    
-  </div>
-  
+        <!-- row -->
+    </div>
+    <!--  big container -->
