--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,9 +26,8 @@
     </head>
 
     <body>
-        <div class="image-container set-full-height" style="background-image: url('assets/img/wizard-book.jpg')">
+        <div class="image-container set-full-height" style="background-image: url('/img/wizard-book.jpg')">
           <!--   Creative Tim Branding   -->
-          <a href="/">
                <div class="logo-container">
                   <div class="brand">
                       Rapidoo
@@ -40,7 +39,9 @@
           <%= yield %>
 
           <div class="footer">
-              
+              <div class="container text-center">
+                  Rapidoo Code Challenge
+             </div>
           </div>
       </div>
     </body>
