--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
     </head>
 
     <body>
-        <div class="image-container set-full-height" style="background-image: url('/img/wizard-book.jpg')">
+        <div class="image-container set-full-height" style="background-image: url('/img/wizard-profile.jpg')">
           <!--   Creative Tim Branding   -->
                <div class="logo-container">
                   <div class="brand">
